fixed spacing of bottom homepage

--- a/css/style.css
+++ b/css/style.css
@@ -637,9 +637,9 @@ footer #footer-bottom {
 }
 /* WIDGET COLS ------------------------------------------------------------*/
 .widget-cols {
-  margin-top: 80px;
-  margin-bottom: 30px;
+  margin:100;
   font-size: 14px;
+
 }
 .widget-cols h1,
 .widget-cols h2,
